--- a/sample/app/build.gradle
+++ b/sample/app/build.gradle
@@ -27,5 +27,7 @@ dependencies {
     compile 'io.reactivex:rxjava:1.2.3'
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.moshi:moshi:1.3.1'
+    compile 'com.squareup.retrofit2:converter-simplexml:2.1.0'
     compile 'com.squareup.okhttp3:okhttp:3.4.2'
 }
